close sublime text 3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>My main title</h1>
-<img src='images/pic1.jpg' alt='a pic of me&luo'>
+<img src='images/pic1.jpg' alt='a pic of me&luo' width="400">
 <h2 id='first-para'>My first line</h2>
 
 <button>Change user</button>
