--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <link href='styles/style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<h1>My main title</h1>
+<h1>Huang & Luo</h1>
 <img src='images/pic1.jpg' alt='a pic of me&luo' width="400">
-<h2 id='first-para'>My first line</h2>
+<h2 id='first-para'>点击图片,等待一会</h2>
 
 <button>Change user</button>
 <script src="scripts/main.js"></script>
