--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <h1>Huang & Luo</h1>
 <img src='images/pic1.jpg' alt='a pic of me&luo' width="400">
 <h2 id='first-para'>点击图片,等待一会</h2>
+<h2>点击按钮，试一试</h2>
 
-<button>Change user</button>
+<button style="height: 40px;width: 100px">变更访客</button>
 <script src="scripts/main.js"></script>
 </body>
 </html>
